More forgiving URL-based parsing.